implement player-vs-player

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 
       <div class="options-group">
         <label for="url-pvp">
-          <input type="radio" id="url-pvp" name="url" value="player-vs-player"
-                 disabled/> <!-- unimplemented yet-->
+          <input type="radio" id="url-pvp" name="url" value="player-vs-player"/>
           Player vs. Player
         </label>
         <label for="url-pva">
