--- a/player-vs-player/index.html
+++ b/player-vs-player/index.html
@@ -25,6 +25,7 @@
   </main>
 
   <script type="module">
+    import {arePositionsEqual} from '/assets/js/board.js'
     import {captureOptionsFromURL} from '/assets/js/move-generation.js'
     import {CheckersState, Status} from '/assets/js/game-state.js'
     import BoardView from '/assets/js/BoardView.js'
@@ -49,7 +50,11 @@
       if (!selectedPosition) {
         if (!marked) return
         selectedPosition = { row, col }
-        view.resetMarks(checkers.actions.map(a => a.sequence[a.sequence.length-1]))
+        view.resetMarks(
+          checkers.actions
+          .filter(a => arePositionsEqual(a.from, selectedPosition))
+          .map(a => a.sequence[a.sequence.length-1])
+        )
       }
       else {
         if (!marked) {
@@ -59,11 +64,9 @@
         // TODO still need to handle more complex situations (where capture sequences overlap / are prefixes of another etc. -- solution: show one at a time) (also could probably do this in a way such that the solution can be reused -- used both in player-vs-ai and player-vs-player)
         const source = selectedPosition
         const destination = { row, col }
-        const possibleActions = checkers.actions.filter(a => {
-          const lastPosition = a.sequence[a.sequence.length-1]
-          return a.from.row == source.row && a.from.col == source.col
-              && lastPosition.row == destination.row && lastPosition.col == destination.col
-        })
+        const possibleActions = checkers.actions.filter(a =>
+          arePositionsEqual(source, a.from) && arePositionsEqual(destination, a.sequence[a.sequence.length-1])
+        )
         const actionTaken = possibleActions[0] // arbitrary choice in the case where two or more actions end up in the same position
         checkers.actionDo(actionTaken)
 
