--- a/player-vs-ai/play.html
+++ b/player-vs-ai/play.html
@@ -21,7 +21,7 @@
 
 <body>
   <main>
-    <div class="board-container">
+    <div id="board-container">
     </div>
 
     <div class="loader-container" style="display: none;">
@@ -30,40 +30,11 @@
   </main>
 
   <script type="module">
+    // TODO redo loader
+    // TODO redo worker
 
-    // nice shortcut borrowed from Java
-    Map.prototype.computeIfAbsent = function(key, fn) {
-      let result = this.get(key)
-      if (result === undefined) {
-        result = fn(key)
-        this.set(key, result)
-      }
-      return result
-    }
-
-    import * as bo from '/assets/js/board.js'
-    import BoardView from '/assets/js/BoardView.js'
-    import {CheckersState, Status} from '/assets/js/game-state.js'
-    import * as mov from '/assets/js/move-generation.js'
-    import * as mm from '/assets/js/minimax.js'
-
-    // const minimaxWorker = new Worker('/assets/js/minimax-worker.js', { type: 'module' })
-
-    const loaderContainer = document.querySelector('.loader-container')
-
-    // TODO make the loader smaller and put it outside the board
-    // currently it's hard to see which action the AI took
-    const toggleLoad = () => {
-      if (window.getComputedStyle(loaderContainer).display == 'flex') {
-        loaderContainer.style.display = 'none'
-      } else {
-        loaderContainer.style.display = 'flex'
-      }
-    }
-
-    // First player = white = human
-
-    // for testing how to show all possible movement options of a piece (particularly complex example, but we should be able to handle it)
+    // TODO detect situations where there is position overlap in capture sequences and show one at a time instead of all at once
+    // test with:
     // const initialBoard = bo.decodeBoard([
     //   '.....@..',
     //   '........',
@@ -74,18 +45,32 @@
     //   '.....x..',
     //   '........',
     // ].join('\n'));
-    const initialBoard = null
+
+    import { arePositionsEqual } from '/assets/js/board.js'
+    import BoardView from '/assets/js/BoardView.js'
+    import * as mm from '/assets/js/minimax.js'
+    import { CheckersState, Status } from '/assets/js/game-state.js'
+    import { captureOptionsFromURL } from '/assets/js/move-generation.js'
 
     const url = new URL(location)
 
-    const captureOptions = mov.captureOptionsFromURL(url)
-    const state = new CheckersState(captureOptions, initialBoard)
+    const heuristic = url.searchParams.get('heuristic') ?? 'countPieces'
+    const depth = url.searchParams.get('depth') ?? 8
+    const minimax = new mm.Minimax(false, mm[heuristic], depth)
+
+    const captureOptions = captureOptionsFromURL(new URL(location))
+    const checkers = new CheckersState(captureOptions)
+
+    const viewContainer = document.getElementById('board-container')
+    const view = new BoardView(checkers.board, viewContainer)
+
+    let ignoreClicks = false
+    let selectedSource = null
 
     function checkStatus() {
-      if (state.status == Status.playing) return
-
+      if (checkers.status == Status.playing) return
       let msg = ''
-      switch (state.status) {
+      switch (checkers.status) {
         case Status.whiteWon: msg = 'White won!'; break
         case Status.blackWon: msg = 'Black won!'; break
         case Status.draw: msg = 'Draw...'; break
@@ -94,90 +79,57 @@
       location.reload()
     }
 
-    const heuristic = url.searchParams.get('heuristic') ?? 'countPieces'
-    const depth = url.searchParams.get('depth') ?? 8
-    const minimax = new mm.Minimax(false, mm[heuristic], depth)
-
-    // this works, but still feels like a bad way to implement this, the code reads weird etc
-
-    const ViewState = Object.freeze({
-      waitingSource:   0,
-      waitingMovement: 1,
-      away:            2, // animating human movement + waiting AI + animating AI movement
-    })
-
-    const boardView = new BoardView(state.board, document.querySelector('.board-container'))
-
-    const currentGameState = {
-      viewState: ViewState.waitingSource,
-      destinationToMovementList: new Map(),
-
-      waitSourceSelection() {
-        currentGameState.viewState = ViewState.waitingSource
-        currentGameState.humanMovementChoices = state.actions
-        currentGameState.destinationToMovementList.clear()
-        boardView.resetMarks(state.actions.map(mov => mov.from))
-      },
-
-      handleClick(row, col, marked) {
-        currentGameState.clickHandlers[currentGameState.viewState](row, col, marked)
-      },
-
-      clickHandlers: {
-        [ViewState.away]: () => { return },
-
-        [ViewState.waitingSource]: (row, col, marked) => {
-          if (!marked) return
-
-          const selectedPieceMovementOptions = state.actions.filter(mov =>
-            mov.from.row == row && mov.from.col == col
-          )
-
-          boardView.clearMarks()
-          for (const movement of selectedPieceMovementOptions) {
-            const destination = movement.sequence[ movement.sequence.length-1 ]
-            boardView.addMark(destination)
-            const serialized = bo.serializePosition(destination)
-            currentGameState.destinationToMovementList.computeIfAbsent(serialized, () => []).push(movement)
-          }
-
-          currentGameState.viewState = ViewState.waitingMovement
-        },
-
-        [ViewState.waitingMovement]: (row, col, marked) => {
-          if (!marked) {
-            // Return to waitingSource state
-            currentGameState.waitSourceSelection()
-          } else {
-            const movements = currentGameState.destinationToMovementList.get(bo.serializePosition({ row, col }))
-            const action = movements[0]
-            state.actionDo(action) // obtain undoInfo
- 
-            currentGameState.viewState = ViewState.away
-            boardView.clearMarks()
-            boardView.animateAction(action).then(() => {
-
-              checkStatus()
-
-              const { action: aiAction } = minimax.val(state)
-              state.actionDo(aiAction) // obtain undoInfo
-
-              boardView.animateAction(aiAction).then(() => {
-                checkStatus()
-                currentGameState.waitSourceSelection()
-              })
-            })
-          }
-        }
-      },
-
+    function waitForPieceSelection() {
+      selectedSource = null
+      view.resetMarks(checkers.actions.map(a => a.from))
     }
 
-    boardView.onClick(currentGameState.handleClick)
+    view.onClick((row, col, marked) => {
+      if (ignoreClicks) return
 
-    currentGameState.waitSourceSelection()
+      if (!selectedSource) {
+        if (!marked) return
+
+        selectedSource = { row, col }
+        view.resetMarks(
+          checkers.actions
+          .filter(a => arePositionsEqual(a.from, selectedSource))
+          .map(a => a.sequence[a.sequence.length-1])
+        )
+      }
+      else {
+        if (!marked) {
+          waitForPieceSelection()
+          return
+        }
+
+        const selectedDestination = { row, col }
+        const possibleActions = checkers.actions.filter(a =>
+          arePositionsEqual(selectedSource, a.from) && arePositionsEqual(selectedDestination, a.sequence[a.sequence.length-1])
+        )
+        const actionTaken = possibleActions[0]
+
+        checkers.actionDo(actionTaken)
+
+        ignoreClicks = true
+        view.clearMarks()
+        view.animateAction(actionTaken).then(() => {
+          checkStatus()
+
+          const { action: aiAction } = minimax.val(checkers)
+          checkers.actionDo(aiAction)
+
+          view.animateAction(aiAction).then(() => {
+            checkStatus()
+            ignoreClicks = false
+            waitForPieceSelection()
+          })
+        })
+      }
+    })
+
+    waitForPieceSelection()
   </script>
-
 </body>
 
 </html>
