--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -28,6 +28,7 @@
         <select name="heuristic" id="heuristic">
           <option value="heuristicCountPieces">countPieces</option>
           <option value="heuristicClusters">clusters</option>
+          <option value="heuristicWeighDistance">weighDistance</option>
         </select>
       </div>
 
