docs: improve documentation on how to spin up local web server

--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -22,7 +22,7 @@
 <body>
   <main>
     <h1 style="margin-bottom: 32px;">AI setup</h1>
-    <form action="/player-vs-ai/play" style="width: 512px;">
+    <form action="/player-vs-ai/play.html" style="width: 512px;">
       <div class="input-group">
         <label for="heuristic">Heuristic</label>
         <select name="heuristic" id="heuristic">
