introduce randomness in minimax, plus minor fix

--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -19,10 +19,12 @@
   </noscript>
 </head>
 
+<!-- FIXME form not working (no GET parameters) -->
+
 <body>
   <main>
     <h1 style="margin-bottom: 32px;">AI setup</h1>
-    <form action="/player-vs-ai/play.html" style="width: 512px;">
+    <form action="/player-vs-ai/play.html" method="get" style="width: 512px;">
       <div class="input-group">
         <label for="heuristic">Heuristic</label>
         <select name="heuristic" id="heuristic">
