--- a/player-vs-ai/play.html
+++ b/player-vs-ai/play.html
@@ -54,7 +54,7 @@
 
     const url = new URL(location)
 
-    const heuristic = url.searchParams.get('heuristic') ?? 'countPieces'
+    const heuristic = url.searchParams.get('heuristic') ?? 'heuristicCountPieces'
     const depth = url.searchParams.get('depth') ?? 8
     const minimax = new mm.Minimax(false, mm[heuristic], depth)
 
