--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         bestCap.removeAttribute('disabled')
       } else {
         bestCap.setAttribute('disabled', '')
+        bestCap.checked = false;
       }
     }
 
