refac: remove semi colon ⚠️

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         bestCap.removeAttribute('disabled')
       } else {
         bestCap.setAttribute('disabled', '')
-        bestCap.checked = false;
+        bestCap.checked = false
       }
     }
 
