refac: add btn-primary class on undo btn

--- a/player-vs-player/index.html
+++ b/player-vs-player/index.html
@@ -23,7 +23,7 @@
   <main>
     <div id="board-container"></div>
 
-    <button id="btn-undo" style="margin-top: 10px;">Undo last move!</button>
+    <button id="btn-undo" class="btn-primary" style="margin-top: 16px;">Undo last move!</button>
   </main>
 
   <script type="module">
