--- a/player-vs-ai/play.html
+++ b/player-vs-ai/play.html
@@ -30,105 +30,23 @@
   </main>
 
   <script type="module">
-    // TODO redo loader
-    // TODO redo worker
 
-    // TODO detect situations where there is position overlap in capture sequences and show one at a time instead of all at once
-    // test with:
-    // const initialBoard = bo.decodeBoard([
-    //   '.....@..',
-    //   '........',
-    //   '...x....',
-    //   '........',
-    //   '.....x..',
-    //   '..x.....',
-    //   '.....x..',
-    //   '........',
-    // ].join('\n'));
-
-    import { arePositionsEqual } from '/assets/js/board.js'
-    import BoardView from '/assets/js/BoardView.js'
-    import * as mm from '/assets/js/minimax.js'
-    import { CheckersState, Status } from '/assets/js/game-state.js'
+    import { setupGame } from '/assets/js/game-client.js'
     import { captureOptionsFromURL } from '/assets/js/move-generation.js'
 
-    const url = new URL(location)
-
-    const heuristic = url.searchParams.get('heuristic') ?? 'heuristicCountPieces'
-    const depth = url.searchParams.get('depth') ?? 8
-    const minimax = new mm.Minimax(false, mm[heuristic], depth)
+    const againstAI = true
 
     const captureOptions = captureOptionsFromURL(new URL(location))
-    const checkers = new CheckersState(captureOptions)
 
-    const viewContainer = document.getElementById('board-container')
-    const view = new BoardView(checkers.board, viewContainer)
+    const container = document.getElementById('board-container')
 
-    let ignoreClicks = false
-    let selectedSource = null
+    const url = new URL(location)
+    const heuristic = url.searchParams.get('heuristic') ?? 'heuristicCountPieces'
+    const depth = url.searchParams.get('depth') ?? 8
+    const aiParameters = { heuristic, depth }
 
-    function checkStatus() {
-      if (checkers.status == Status.playing) return
-      let msg = ''
-      switch (checkers.status) {
-        case Status.whiteWon: msg = 'White won!'; break
-        case Status.blackWon: msg = 'Black won!'; break
-        case Status.draw: msg = 'Draw...'; break
-      }
-      alert(msg)
-      location.reload()
-    }
+    setupGame(againstAI, captureOptions, container, aiParameters)
 
-    function waitForPieceSelection() {
-      selectedSource = null
-      view.resetMarks(checkers.actions.map(a => a.from))
-    }
-
-    view.onClick((row, col, marked) => {
-      if (ignoreClicks) return
-
-      if (!selectedSource) {
-        if (!marked) return
-
-        selectedSource = { row, col }
-        view.resetMarks(
-          checkers.actions
-          .filter(a => arePositionsEqual(a.from, selectedSource))
-          .map(a => a.sequence[a.sequence.length-1])
-        )
-      }
-      else {
-        if (!marked) {
-          waitForPieceSelection()
-          return
-        }
-
-        const selectedDestination = { row, col }
-        const possibleActions = checkers.actions.filter(a =>
-          arePositionsEqual(selectedSource, a.from) && arePositionsEqual(selectedDestination, a.sequence[a.sequence.length-1])
-        )
-        const actionTaken = possibleActions[0]
-
-        checkers.actionDo(actionTaken)
-
-        ignoreClicks = true
-        view.clearMarks()
-        view.animateActionDo(actionTaken).then(() => {
-          checkStatus()
-
-          const { action: aiAction } = minimax.val(checkers)
-          checkers.actionDo(aiAction)
-
-          view.animateActionDo(aiAction).then(() => {
-            checkStatus()
-            ignoreClicks = false
-            waitForPieceSelection()
-          })
-        })
-      }
-    })
-
-    waitForPieceSelection()
   </script>
 </body>
 
