--- a/player-vs-player/index.html
+++ b/player-vs-player/index.html
@@ -27,93 +27,22 @@
   </main>
 
   <script type="module">
-    import {arePositionsEqual} from '/assets/js/board.js'
-    import {captureOptionsFromURL} from '/assets/js/move-generation.js'
-    import {CheckersState, Status} from '/assets/js/game-state.js'
-    import BoardView from '/assets/js/BoardView.js'
+
+    import { setupGame } from '/assets/js/game-client.js'
+    import { captureOptionsFromURL } from '/assets/js/move-generation.js'
+
+    const againstAI = false
 
     const captureOptions = captureOptionsFromURL(new URL(location))
 
-    const checkers = new CheckersState(captureOptions)
-    const actionStack = []
+    const container = document.getElementById('board-container')
 
-    const actionDo = action => {
-      checkers.actionDo(action)
-      actionStack.push(action)
-    }
+    const url = new URL(location)
+    const heuristic = url.searchParams.get('heuristic') ?? 'heuristicCountPieces'
+    const depth = url.searchParams.get('depth') ?? 8
+    const aiParameters = { heuristic, depth }
 
-    const lastActionUndo = () => {
-      if (actionStack.length == 0) return
-      const action = actionStack.pop()
-      checkers.actionUndo(action)
-      return action
-    }
+    setupGame(againstAI, captureOptions, container, aiParameters)
 
-    const viewContainer = document.getElementById('board-container')
-    const view = new BoardView(checkers.board, viewContainer)
-
-    let selectedPosition = null
-
-    const waitPieceSelection = () => {
-      view.resetMarks(checkers.actions.map(a => a.from))
-      selectedPosition = null
-    }
-
-    document.getElementById('btn-undo').onclick = () => {
-      if (view.inAnimation()) return;
-      if (actionStack.length == 0) return;
-
-      const action = lastActionUndo()
-      view.clearMarks()
-      view.animateActionUndo(action).then(() => {
-        waitPieceSelection()
-      })
-    }
-
-    view.onClick((row, col, marked) => {
-      if (view.inAnimation()) return // TODO really necessary?
-      if (!selectedPosition) {
-        if (!marked) return
-        selectedPosition = { row, col }
-        view.resetMarks(
-          checkers.actions
-          .filter(a => arePositionsEqual(a.from, selectedPosition))
-          .map(a => a.sequence[a.sequence.length-1])
-        )
-      }
-      else {
-        if (!marked) {
-          waitPieceSelection()
-          return
-        }
-        // TODO still need to handle more complex situations (where capture sequences overlap / are prefixes of another etc. -- solution: show one at a time) (also could probably do this in a way such that the solution can be reused -- used both in player-vs-ai and player-vs-player)
-        const source = selectedPosition
-        const destination = { row, col }
-        const possibleActions = checkers.actions.filter(a =>
-          arePositionsEqual(source, a.from) && arePositionsEqual(destination, a.sequence[a.sequence.length-1])
-        )
-        const actionTaken = possibleActions[0] // arbitrary choice in the case where two or more actions end up in the same position
-        actionDo(actionTaken)
-
-        view.clearMarks()
-        view.animateActionDo(actionTaken).then(() => {
-
-          if (checkers.status != Status.playing) {
-            let msg = ''
-            switch (checkers.status) {
-              case Status.whiteWon: msg = 'White won!'; break
-              case Status.blackWon: msg = 'Black won!'; break
-              case Status.draw:     msg = 'Draw...'; break
-            }
-            alert(msg)
-            location.reload()
-          }
-
-          waitPieceSelection()
-        })
-      }
-    })
-
-    waitPieceSelection()
   </script>
 </body>
